Fix: Fix horizontal scroll in blog section arrow

--- a/css/style.scss
+++ b/css/style.scss
@@ -845,6 +845,10 @@ h4 {
     margin-left: $base * 16;
     transform: translateY(-50%) rotate(180deg);
   }
+
+  @media(max-width: $breakpoint-lg-max){
+    display: none;
+  }
 }
 // === / BLOG ===
 
